# Pluralscan

./: .docker.env  .dockerignore  .gitignore  .pylintrc  CODING_STYLE.md  COMMIT_CONVENTION.md  CONVENTION.md  DEFINTIONS.md  Dockerfile  HELP.md  LICENSE  NOTICE.md  README.md  RELEASE_TODO.md  SARIF.md  TOOLS.md  docker-compose.yml  dotnet.Dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ubutun.debug.Dockerfile
commandline/: README.md  __init__.py  __main__.py  config.py  pyproject.toml
commandline/package/: package.py
commandline/project/: project.py
pluralscan-commandline/: README.md  pyproject.toml
pluralscan-commandline/src/__tests__/integration_tests_cli/package/: test_new_command.py
pluralscan-commandline/src/pluralscanner/: __init__.py  __main__.py
pluralscan-commandline/src/pluralscanner/analyzers/: analyzer.py
pluralscan-commandline/src/pluralscanner/package/: package.py
pluralscan-commandline/src/pluralscanner/project/: project.py
pluralscan-commandline/src/pluralscanner/projects/: project.py
pluralscan-core/: README.md  install.ps1  pyproject.toml
pluralscan-core/src/__tests__/: __init__.py  test_helpers.py
pluralscan-core/src/__tests__/fixtures/cbl/: SAVINGS.cbl
pluralscan-core/src/__tests__/integration_tests_data_mongodb/analyzers/: test_analyzer_document.py  test_analyzer_mapper.py  test_analyzer_repository.py  test_analyzer_seeder.py  test_analyzer_validation.py
pluralscan-core/src/__tests__/integration_tests_infrastructure/workers/: test_scan_package_job.py
pluralscan-core/src/__tests__/unit_tests_core/: test_utils.py
pluralscan-core/src/__tests__/unit_tests_data_inmemory/: test_mem_analyser_repository.py  test_mem_project_repository.py
pluralscan-core/src/__tests__/unit_tests_data_inmemory/analyzers/: test_analyzer_repository.py  test_analyzer_seeder.py
pluralscan-core/src/__tests__/unit_tests_data_inmemory/executables/: test_executable_seeder.py
pluralscan-core/src/__tests__/unit_tests_data_inmemory/projects/: test_project_events.py
pluralscan-core/src/__tests__/unit_tests_domain/analyzer/: test_analyzer.py
pluralscan-core/src/__tests__/unit_tests_domain/analyzers/: test_analyzer.py
pluralscan-core/src/__tests__/unit_tests_domain/projects/: test_project.py  test_project_source.py
pluralscan-core/src/__tests__/unit_tests_domain/technologies/: test_language.py
pluralscan-core/src/__tests__/unit_tests_domain/technology/: test_language.py  test_technology.py
pluralscan-core/src/__tests__/unit_tests_libs/utils/: test_crypto.py
pluralscan-core/src/pluralscan/: __init__.py
pluralscan-core/src/pluralscan/application/processors/: README.md
pluralscan-core/src/pluralscan/data/: __init__.py
pluralscan-core/src/pluralscan/data/mongodb/: README.md  (+1 more)
pluralscan-core/src/pluralscan/domain/: errors.py
pluralscan-core/src/pluralscan/infrastructure/: config.py
pluralscan-fastapi/: main.py  pyproject.toml
pluralscan-fastapi/configs/: database.py  environment.py
pluralscan-fastapi/factories/: analyzer_factory.py  package_factory.py  project_factory.py  scan_factory.py
pluralscan-fastapi/routers/v1/: analyzer_router.py  package_router.py  project_router.py  scan_router.py
webapp/: pyproject.toml
webapp/backend/: settings.py  urls.py
webapp/backend/analyzers/: factories.py  serializers.py  urls.py  views.py
webapp/backend/analyzers/tests/: unit_test_views.py
webapp/backend/authentication/: serializers.py
webapp/backend/static/frontend/: bundle.css  bundle.js  bundle.js.map
webapp/backend/staticfiles/: staticfiles.json
webapp/backend/staticfiles/frontend/: bundle.8f60d6f442ff.js  bundle.js  bundle.js.adba5b828090.map
webapp/backend/templates/spa/: index.html
webapp/frontend/: README.md  package-lock.json  package.json  rollup.config.js
webapp/frontend/src/: App.svelte  main.js
webapp/frontend/src/analyzers/: Analyzers.svelte
webapp/frontend/src/dashboard/: Dashboard.svelte
(+654 files in other folders)
