[tool.poetry]
name = "cleansecpy"
version = "0.1.0"
description = ""
authors = ["Luidgi Gromat <gromat.luidgi@gmail.com>"]
packages = [
    { include = "./cleansecpy" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest-env = "^0.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
