[tool.poetry]
name = "pluralscanner"
version = "0.1.0"
description = ""
authors = ["Luidgi Gromat <gromat.luidgi@gmail.com>"]
license = "MIT"
packages = [
    { include = "src/pluralscan-commandline" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
