[tool.poetry]
name = "pluralscan"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Luidgi Gromat <luidgi@pluralscan.com>"]
maintainers = ["Luidgi Gromat <luidgi@pluralscan.com>"]
readme = "README.md"
homepage = "https://pluralscan.com"
repository = "https://github.com/Pluralscan/Pluralscan"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
GitPython = "^3.1.27"
python-gitlab = "^3.5.0"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"
pytest-env = "^0.6.2"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
coverage = "^6.4.1"
mypy = {git = "https://github.com/python/mypy.git"}
types-requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
