[tool.poetry]
name = "pluralscan-fastapi"
version = "0.1.0"
description = ""
authors = ["Luidgi Gromat <gromat.luidgi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
pymongo = "^4.1.1"
sse-starlette = "^1.1.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
