[tool.poetry]
name = "cleansecpy-web"
version = "0.1.0"
description = ""
authors = ["Luidgi Gromat <gromat.luidgi@gmail.com>"]

[tool.poetry.dependencies]
cleansecpy = "^0.1.0"
python = "^3.9"
Django = "^4.0.5"
whitenoise = "^6.1.0"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
pymongo = "^4.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest-drf = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
